--- a/static/style.css
+++ b/static/style.css
@@ -174,6 +174,12 @@ select {
     background: #C4C4C4;
 }
 
+.blur {
+    opacity: 0.5;
+    filter: blur(4px);
+    pointer-events: none;
+}
+
 h1 {
     color: #000000;
     font-size: 64px;
@@ -377,185 +383,12 @@ input:checked + .slider:before {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#aktivitet {
-    /*width: 19%;*/
-}
-
-input#antal{
-    /*width: 5%;*/
-
-}
-
-#number {
-    /*width: 50%;*/
-}
-
-img.ui-datepicker-trigger {
-    /*max-width: 20px;*/
-
-}
-
-#selected {
-    /*border: 2px solid #298089;*/
-    /*border-radius: 5px;*/
-    /*font-size: 18px;*/
-    /*padding: 0.5rem;*/
-    /*width: 18%;*/
-    /*display: block;*/
-    /*float: right;*/
-    /*text-align: left;*/
-    /*position: relative;*/
-    /*position: absolute;*/
-    /*top: 100px;*/
-    /*right: 10px;*/
-}
-
-#selector {
-    /*border: 2px solid #298089;*/
-    /*border-radius: 5px;*/
-    /*font-size: 18px;*/
-    /*padding: 0.5rem;*/
-    /*width: 50%;*/
-    /*display: block;*/
-}
-
-#calendar {
-    /*position: absolute;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
-
-    /*transform: translate(-50%, -50%);*/
-    /*width: 80%;*/
-}
-
-/*conflict*/
-p {
-   width: 70%;
-   margin: auto;
-   align-items: right;
-}
-
-p1{
-  font-family: "Helvetica";
-  margin: -600%;
-}
-/*conflict*/
-
-.title,
-.selector {
-    /*margin: 10px 0;*/
-}
-
-
-
-#historik-bakgrund {
-    /*background-color: #8DC2CE;*/
-    /*background-position: center;*/
-    /*border-radius: 15px;*/
-    /*box-shadow: 0 0 10px #666;*/
-    /*height: 480px;*/
-    /*margin-top: 180px;*/
-    /*padding: 50px;*/
-    /*padding-top: 70px;*/
-    /**/
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
-}
-
-#historik-bakgrund > article {
-    /*background-color: rgba(255, 255, 255, 0.9);*/
-    /*border-radius: 15px;*/
-    /*padding: 20px;*/
-    /*width: 50%;*/
-    /**/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-}
-
-button a {
-    /*color: #000000;*/
-    /*text-decoration: none;*/
-    /*text-transform: uppercase;*/
-    /*text-align: center;*/
-    /*width: 50%;*/
-}
-
-#buttonside2side {
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*text-align: center;*/
-    /*width: 50%;*/
-}
-
-#folder1 {
-    /*background-color: #8DC2CE;*/
-    /*background-position: center;*/
-    /*border-radius: 15px;*/
-    /*height: 480px;*/
-    /*padding: 400px;*/
-    /*padding-top: 50px;*/
-    /*border-radius: 0 0 15px 15px;*/
-    /*text-align: center;*/
-
-
-
-    /*justify-content: center;*/
-    /*align-items: center;*/
-}
-
-
-
-
-
-#folder {
-    /*background-color: #8DC2CE;*/
-    /*background-position: center;*/
-    /*border-radius: 15px;*/
-    /**/
-    /*padding: 50px;*/
-    /*border-radius: 0 0 15px 15px;*/
-    /*text-align: center;*/
-    /**/
-    /**/
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    /*height: 560px;*/
-}
-
-
-
-
-
-#edit-icon {
-    /*margin-left: 10px;*/
-    /*width: 30px;*/
-}
-
-#edit {
-    /*margin: 10px 0px;*/
-    /**/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-}
-
 .mobile-only {
     display: none;
+}
+
+#aktivitet {
+    width: 100%;
 }
 
 
