Overlay knapp + följaupp

--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,10 @@ select {
     flex-direction: column;
 }
 
+.blue {
+    background-color: #8DC2CE;
+}
+
 .button-blue {
     background-color: #BADFE8;
     cursor: pointer;
@@ -163,7 +167,7 @@ select {
 .clicked,
 .not-selected,
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .flex-grow {
@@ -178,6 +182,7 @@ select {
     opacity: 0.5;
     filter: blur(4px);
     pointer-events: none;
+    transition: all 0.5s ease;
 }
 
 h1 {
@@ -391,7 +396,109 @@ input:checked + .slider:before {
     width: 100%;
 }
 
+.overlay {
+    filter: blur(4px);
+    opacity: 0.5;
+    pointer-events: none;
+}
 
+body > span:first-child {
+    position: fixed;
+    top: calc(50vh - 50px);
+    left: calc(50vw - 150px);
+    width: 300px;
+    height: 100px;
+    background: orange;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+    flex-flow: column;
+    align-items: center;
+}
+
+body > span:first-child > button {
+    width: 50px;
+    height: 30px;
+    color: black;
+    margin: 10px;
+}
+
+
+.ui-datepicker-trigger {
+    width: 50px;
+}
+
+.tableFixHead {
+    overflow-y: auto;
+    height: 400px;
+}
+
+.tableFixHead + .tableFixHead {
+    margin-top: 20px;
+}
+
+.tableFixHead thead th {
+    position: sticky;
+    top: 0;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: #fff;
+}
+th,
+td {
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+}
+th {
+    background: #eee;
+}
+
+tr {
+    background-color: #C1C1C1;
+}
+
+tr:nth-child(2n) {
+    background-color: #E1E1E1;
+}
+
+#historik-bakgrund {
+    display: grid;
+    grid-template-areas:
+    "a a"
+    "b c"
+    "d .";
+    width: 50vw;
+    justify-content: center;
+    align-content: start;
+    grid-gap: 10px;
+}
+
+#historik-bakgrund > *:nth-child(1) {
+    grid-area: a;
+    justify-self: start;
+    margin-bottom: -10px;
+}
+#historik-bakgrund > *:nth-child(2) {
+    grid-area: b;
+}
+#historik-bakgrund > *:nth-child(3) {
+    grid-area: c;
+}
+#historik-bakgrund > *:nth-child(4) {
+    grid-area: d;
+    width: 120px;
+    margin: 0;
+    justify-self: center;
+}
+
+#historik-bakgrund + section > p {
+    border-radius: 10px 10px 0 0;
+    padding: 10px;
+    font-size: 50px;
+}
 
 
 
