--- a/static/style.css
+++ b/static/style.css
@@ -471,7 +471,7 @@ tr:nth-child(2n) {
     "a a"
     "b c"
     "d .";
-    width: 50vw;
+
     justify-content: center;
     align-content: start;
     grid-gap: 10px;
@@ -578,6 +578,10 @@ tr:nth-child(2n) {
         justify-content: center;
     }
 
+    nav + section {
+        margin-top: 5px;
+    }
+
     #menu {
 
         overflow: hidden;
@@ -633,6 +637,11 @@ tr:nth-child(2n) {
     nav h2 {
         border-radius: 0px 0px 0px 0px;
     }
+    #buttoncontainer,
+    #chosencontainer {
+        width: 300px;
+        height: 200px;
+    }
 
     select{
         width: 60%;
@@ -655,4 +664,6 @@ tr:nth-child(2n) {
     #jumbo > article {
         width: 80%;
     }
+
+
 }
