--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ select {
     font-size: 18px;
     padding: 0.5rem;
     width: 40%;
-    
+
 }
 
 
@@ -179,11 +179,20 @@ select {
     background: #C4C4C4;
 }
 
+.white {
+    background: white;
+}
+
 .blur {
     opacity: 0.5;
     filter: blur(4px);
     pointer-events: none;
     transition: all 0.5s ease;
+}
+
+.click:before {
+    font-family: FontAwesome;
+    content: "\f0a6";
 }
 
 h1 {
@@ -283,11 +292,18 @@ nav h2:hover a {
     height: 500px;
 }
 
-#buttoncontainer .button-orange,
-#chosencontainer .button-orange {
+#buttoncontainer .button-blue,
+#chosencontainer .button-blue {
     padding: 5px;
     margin: 5px;
     width: 100%;
+    border-radius: 20px;
+    color: black;
+}
+
+#buttoncontainer .button-blue:hover,
+#chosencontainer .button-blue:hover {
+    color: #438D9D;
 }
 
 input,
@@ -416,6 +432,7 @@ body > span:first-child {
     border-radius: 20px;
     flex-flow: column;
     align-items: center;
+    z-index: 1;
 }
 
 body > span:first-child > button {
@@ -423,6 +440,8 @@ body > span:first-child > button {
     height: 30px;
     color: black;
     margin: 10px;
+    border-radius: 10px;
+    border: none;
 }
 
 
@@ -432,7 +451,7 @@ body > span:first-child > button {
 
 .tableFixHead {
     overflow-y: auto;
-    height: 400px;
+    max-height: 400px;
 }
 
 .tableFixHead + .tableFixHead {
@@ -517,7 +536,7 @@ tr:nth-child(2n) {
         flex-direction: column;
     }
     body{
-        flex-direction: column;	
+        flex-direction: column;
         line-height:1.5;
         padding:30px 10px 0;
         line-height: 25px;
@@ -595,9 +614,9 @@ tr:nth-child(2n) {
     }
 
     div#menu {
- 
+
         display: grid;
-        grid-template-areas: 
+        grid-template-areas:
         "a b"
         "a c"
         "d d";
@@ -605,7 +624,7 @@ tr:nth-child(2n) {
 
     div#menu > :nth-child(1) {
         grid-area: a;
-       
+
 
     }
     div#menu > :nth-child(2) {
